--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -72,15 +72,15 @@
 
                 <TextView
                     android:id="@+id/typeFilter"
+                    android:text="@string/property_type"
+                    android:textStyle="bold"
                     style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/property_type"
-                    android:textStyle="bold"
+                    android:layout_marginBottom="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginStart"
                     android:paddingStart="@dimen/marginStart"
-                    android:paddingTop="@dimen/marginTop"
                     android:paddingEnd="@dimen/marginEnd"
-                    android:paddingBottom="@dimen/marginTop"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -199,9 +199,9 @@
                     style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginStart"
                     android:paddingStart="@dimen/marginStart"
-                    android:paddingTop="@dimen/marginTop"
                     android:paddingEnd="@dimen/marginEnd"
                     android:text="@string/nearby"
                     android:textStyle="bold"
@@ -398,10 +398,10 @@
                     style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginStart"
                     android:paddingStart="@dimen/marginStart"
-                    android:paddingTop="@dimen/marginTop"
                     android:paddingEnd="@dimen/marginEnd"
-                    android:paddingBottom="@dimen/marginTop"
                     android:text="@string/price"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -468,10 +468,10 @@
                     style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginStart"
                     android:paddingStart="@dimen/marginStart"
-                    android:paddingTop="@dimen/marginTop"
                     android:paddingEnd="@dimen/marginEnd"
-                    android:paddingBottom="@dimen/marginTop"
                     android:text="@string/surface"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -499,6 +499,8 @@
                     style="@style/Base.CardView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/marginTop"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.473"
                     app:layout_constraintStart_toStartOf="parent"
@@ -507,12 +509,14 @@
 
                     <com.google.android.material.slider.RangeSlider
                         android:id="@+id/surfaceRangeSlider"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingStart="@dimen/marginStart"
                         android:paddingEnd="@dimen/marginEnd"
                         android:paddingBottom="@dimen/marginTop"
-                        android:stepSize="10"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
                         android:valueFrom="@{viewModel.minSurface}"
                         android:valueTo="@{viewModel.maxSurface}"
                         app:values="@{viewModel.surfaceArray}" />
