--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
             <com.nambimobile.widgets.efab.ExpandableFab
                 android:id="@+id/expandable_fab_portrait"
                 android:layout_width="wrap_content"
-                android:contentDescription="Fab add"
+                android:contentDescription="@string/fab_add"
                 android:layout_height="wrap_content"
                 app:efab_iconAnimationRotationDeg="0.0"
                 app:efab_orientation="portrait"
@@ -47,7 +47,7 @@
             <com.nambimobile.widgets.efab.FabOption
                 android:id="@+id/fabAddProperty"
                 android:layout_width="wrap_content"
-                android:contentDescription="Property add"
+                android:contentDescription="@string/property_add"
                 android:layout_height="wrap_content"
                 app:fab_icon="@drawable/ic_house_24dp"
                 app:fab_orientation="portrait"
