--- a/app/src/main/res/menu/menu_fragment_properties.xml
+++ b/app/src/main/res/menu/menu_fragment_properties.xml
@@ -14,11 +14,17 @@
         app:showAsAction="always">
         <menu>
             <item
-                android:id="@+id/action_sort_by_price"
-                android:title="@string/sort_by_price" />
+                android:id="@+id/action_sort_by_price_asc"
+                android:title="@string/sort_by_price_asc" />
             <item
-                android:id="@+id/action_sort_by_date_on_market"
-                android:title="@string/sort_by_date_on_market" />
+                android:id="@+id/action_sort_by_price_dsc"
+                android:title="@string/sort_by_price_dsc" />
+            <item
+                android:id="@+id/action_sort_by_date_on_market_asc"
+                android:title="@string/sort_by_date_on_market_asc" />
+            <item
+                android:id="@+id/action_sort_by_date_on_market_dsc"
+                android:title="@string/sort_by_date_on_market_dsc" />
         </menu>
     </item>
     <item
