update search with different query
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/menu/edit_menu.xml
+++ b/app/src/main/res/menu/edit_menu.xml
@@ -6,4 +6,10 @@
         android:icon="@drawable/ic_edit_24dp"
         android:title="@string/edit"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/devise"
+        android:icon="@drawable/ic_edit_24dp"
+        android:title="@string/edit"
+        app:showAsAction="ifRoom" />
 </menu>
