--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,22 +6,12 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="bottomSheetDialogTheme">@style/ThemeOverlay.Demo.BottomSheetDialog</item>
+        <item name="bottomSheetDialogTheme">@style/CustomBottomSheet</item>
+        <item name="bottomSheetStyle">@style/CustomBottomSheet</item>
+
+        <item name="bottomAppBarStyle">@style/MyCustomTheme</item>
 
 
-    </style>
-
-    <style name="ThemeOverlay.Demo.BottomSheetDialog" parent="@style/ThemeOverlay.MaterialComponents.BottomSheetDialog">
-        <item name="bottomSheetStyle">@style/Widget.Demo.BottomSheet</item>
-    </style>
-
-    <style name="Widget.Demo.BottomSheet" parent="Widget.MaterialComponents.BottomSheet">
-        <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.Demo</item>
-    </style>
-
-    <style name="ShapeAppearanceOverlay.Demo" parent="">
-        <item name="cornerSize">8dp</item>
-        <item name="cornerFamily">rounded</item>
     </style>
 
     <style name="Widget.MyApp.Chip.Choice" parent="Widget.MaterialComponents.Chip.Choice">
@@ -52,6 +42,7 @@
         <item name="cornerSizeTopLeft">16dp</item>
         <item name="cornerSizeBottomRight">0dp</item>
         <item name="cornerSizeBottomLeft">0dp</item>
+        <item name="android:background">@color/colorPrimaryDark</item>
     </style>
 
     <style name="MyCustomTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
