add currency change on click in MainActivity.kt appbar
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/menu/menu_fragment_properties.xml
+++ b/app/src/main/res/menu/menu_fragment_properties.xml
@@ -2,6 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_currency_dollar"
+        android:icon="@drawable/ic_attach_dollars_24dp"
+        android:title="@string/currency_choose"
+        app:showAsAction="ifRoom|collapseActionView" />
+    <item
+        android:id="@+id/action_currency_euro"
+        android:icon="@drawable/ic_euro_symbol_24dp"
+        android:title="@string/currency_choose"
+        android:visible="false"
+        app:showAsAction="ifRoom|collapseActionView" />
+    <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search_24dp"
         android:title="@string/search"
@@ -11,7 +22,7 @@
     <item
         android:icon="@drawable/ic_baseline_sort_24"
         android:title="@string/sort"
-        app:showAsAction="always">
+        app:showAsAction="ifRoom|collapseActionView">
         <menu>
             <item
                 android:id="@+id/action_sort_by_price_asc"
