--- a/app/src/main/res/layout/property_list_content.xml
+++ b/app/src/main/res/layout/property_list_content.xml
@@ -14,6 +14,10 @@
         <variable
             name="property"
             type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
+
+        <variable
+            name="currency"
+            type="com.openclassrooms.realestatemanager.utils.Utils.PropertyCurrency" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
@@ -70,6 +74,7 @@
             <TextView
                 android:id="@+id/text_price"
                 price="@{property.price}"
+                currency="@{currency}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/text_margin"
