--- a/app/src/main/res/menu/menu_fragment_properties.xml
+++ b/app/src/main/res/menu/menu_fragment_properties.xml
@@ -2,16 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_currency_dollar"
+        android:id="@+id/action_currency"
         android:icon="@drawable/ic_attach_dollars_24dp"
         android:title="@string/currency_choose"
         app:showAsAction="ifRoom|collapseActionView" />
-    <item
-        android:id="@+id/action_currency_euro"
-        android:icon="@drawable/ic_euro_symbol_24dp"
-        android:title="@string/currency_choose"
-        android:visible="false"
-        app:showAsAction="ifRoom|collapseActionView" />
+
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search_24dp"
