update MainActivity.kt setObserver method
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout-sw600dp/property_detail.xml
+++ b/app/src/main/res/layout-sw600dp/property_detail.xml
@@ -96,7 +96,7 @@
                 android:id="@+id/item_price"
                 style="@style/TextAppearance.MaterialComponents.Subtitle1"
                 price="@{property.price}"
-                currency="@{viewModel.currency}"
+                currency="@{viewModel.isEuroCurrency()}"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingStart="@dimen/marginEnd"
