--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -139,7 +139,7 @@
                 <TextView
                     android:id="@+id/item_price"
                     style="@style/TextAppearance.MaterialComponents.Subtitle1"
-                    currency="@{viewModel.currency}"
+                    currency="@{viewModel.isEuroCurrency()}"
                     price="@{property.price}"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
