update PropertyDetailFragment.kt -> implement observer on currency
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout-sw600dp/property_detail.xml
+++ b/app/src/main/res/layout-sw600dp/property_detail.xml
@@ -20,8 +20,8 @@
             type="android.view.View.OnClickListener" />
 
         <variable
-            name="viewModel"
-            type="com.openclassrooms.realestatemanager.presentation.ui.MainViewModel" />
+            name="isCurrencyEuro"
+            type="java.lang.Boolean" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -96,7 +96,7 @@
                 android:id="@+id/item_price"
                 style="@style/TextAppearance.MaterialComponents.Subtitle1"
                 price="@{property.price}"
-                currency="@{viewModel.isEuroCurrency()}"
+                currency="@{isCurrencyEuro}"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingStart="@dimen/marginEnd"
