--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -25,8 +25,8 @@
             type="com.openclassrooms.realestatemanager.domain.model.property.Address" />
 
         <variable
-            name="viewModel"
-            type="com.openclassrooms.realestatemanager.presentation.ui.MainViewModel" />
+            name="isCurrencyEuro"
+            type="java.lang.Boolean" />
 
         <variable
             name="clickListener"
@@ -139,7 +139,7 @@
                 <TextView
                     android:id="@+id/item_price"
                     style="@style/TextAppearance.MaterialComponents.Subtitle1"
-                    currency="@{viewModel.isEuroCurrency()}"
+                    currency="@{isCurrencyEuro}"
                     price="@{property.price}"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
