--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,6 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 app:hideOnScroll="true"
+                app:fabAlignmentMode="center"
                 app:navigationIcon="@drawable/ic_menu_24dp"
                 tools:ignore="BottomAppBar" />
 
