--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -437,7 +437,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
-<!--
+
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
             style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
@@ -457,7 +457,7 @@
             android:contentDescription="@string/add_property_button"
             app:backgroundTint="@color/colorAccent"
             app:layout_anchor="@id/bottomAppBar"
-            app:srcCompat="@drawable/ic_edit_24dp" />-->
+            app:srcCompat="@drawable/ic_edit_24dp" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
