--- a/app/src/main/res/layout-w900dp/property_list.xml
+++ b/app/src/main/res/layout-w900dp/property_list.xml
@@ -60,7 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:menu="@menu/bottom_app_bar"
+        app:menu="@menu/bottom_nav_drawer_menu"
         app:navigationIcon="@drawable/ic_menu_24dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
