--- a/app/src/main/res/layout/loan_fragment.xml
+++ b/app/src/main/res/layout/loan_fragment.xml
@@ -4,22 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.view.View" />
 
         <variable
             name="viewModel"
             type="com.openclassrooms.realestatemanager.presentation.ui.loan.LoanViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/marginStart"
         tools:context=".presentation.ui.loan.LoanFragment">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/propertyPriceLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/marginEnd"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -28,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/property_price"
-                android:text="@{viewModel.propertyPrice}" />
+                android:text="@={viewModel.propertyPrice}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -36,6 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/marginTop"
+            android:layout_margin="@dimen/marginEnd"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/propertyPriceLayout">
 
@@ -44,7 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/down_payment"
-                android:text="@{viewModel.downPayment}" />
+                android:text="@={viewModel.downPayment}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -52,6 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/marginTop"
+            android:layout_margin="@dimen/marginEnd"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/downPaymentLayout">
 
@@ -60,7 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/interest_rate"
-                android:text="@{viewModel.interestRate}" />
+                android:text="@={viewModel.interestRate}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
@@ -69,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/marginTop"
             android:text="@string/loan_term"
-
+            android:layout_margin="@dimen/marginEnd"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/interestRateLayout" />
 
@@ -81,16 +86,20 @@
             android:value="@{viewModel.loanTerm}"
             android:valueFrom="5.0"
             android:valueTo="30.0"
+            android:layout_margin="@dimen/marginEnd"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/loanTermText" />
 
         <TextView
             android:id="@+id/resultText"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/marginTop"
-            android:text="@{@string/loanResult(viewModel.loanTerm) }"
+            android:layout_margin="@dimen/marginEnd"
+            android:text="@{ @string/loanResult(viewModel.loanTerm,viewModel.interest, viewModel.monthlyLoan ) }"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/loanTermSlider" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
