add price  step size value base on max and min price in MainViewModel.kt
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -446,7 +446,7 @@
                         android:paddingStart="@dimen/marginStart"
                         android:paddingEnd="@dimen/marginEnd"
                         android:paddingBottom="@dimen/marginTop"
-                        android:stepSize="100000"
+                        android:stepSize="@{viewModel.stepSize}"
                         android:valueFrom="@{viewModel.minPrice}"
                         android:valueTo="@{viewModel.maxPrice}"
                         app:layout_constraintStart_toStartOf="parent"
